@@ -1,3 +1,10 @@
+2016-06-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* src/ConfigMgr.cxx: add mechanism to keep extending UL range if running
+	in asymptotic mode. Will keep added points and merging
+	HypoTestInverterResult until +2sigma band < 0.05 and the UL <0.9x the scan
+	range. Also store the plot as pdf and png.
+	* src/StatTools.cxx: roll back previous changes
+
 2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* src/StatTools.cxx: add mechanism to keep extending UL range if running
 	asymptotic, until +2 sigma band is below 0.05
